# pytest-summary

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  action.yml  environment.yml  noxfile.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: release.yml  test_simple.yml  test_validate_python.yml  test_validate_python_with_options.yml  test_validate_python_with_output.yml  test_validate_python_with_paths.yml  test_validate_python_with_show.yml  test_with_options.yml  test_with_output.yml  test_with_paths.yml  test_with_show.yml  test_with_venv.yml  validate.yml  validate_action.yml
tests/: conftest.py  test_false.py  test_true.py
